2004-11-30 Magnus Hagdorn
 * glimmer_temp.f90: fix minor bug and some clean-ups

2004-11-29 Magnus Hagdorn
 * glide_types.f90: added some factors for sliding heating
 * glimmer_temp.f90: added basal heat flux due to sliding
 * glimmer_thck.f90: fixed minor bug with pre-processor

2004-11-21 Magnus Hagdorn
 * glide.f90: hooked up new linear and non-linear solvers
 * glide_types.f90: allocate elements for sparse matrix at 
   model start
 * glimmer_thck.f90: removed old solvers, added new linear 
   and non-linear sovler
 * glimmer_velo.f90: split up zerovelo into several subroutines

2004-11-18 Magnus Hagdorn
 started temporary ChangeLog for GLINT-GLIDE_eismint branch
 this is the first round of changes to make EISMINT work
 * glide_stop.f90: new module containing glide_finalise to avoid 
   circular dependencies
 * glide.f90: removed glide_finalise so it can be called by other modules
     in case of crash; velocities are not calculated when non-linear
     evolution is used since they are calculated then; linear ice evo code
     is called with lower surface instead of upper surface
 * glimmer_temp.f90: implement improved basal BC; can now switch various
     parts of temp calculations on/off at compile time
 * glimmer_thck.f90: fixed linear evo code; glide_finalise is called when
     solver crashes
 * glimmer_velo.f90: reformated some lines in subroutine wvelintg to make
     it easier to read, changed chckwvel to use difference rather than
     ratio for correcting vertical velos